# greeter

./: Cargo.toml  LICENSE  README.md  config.sample.toml  config.toml
src/: config.rs  log.rs  main.rs
