[package]
name = "greeter"
version = "0.1.0"
edition = "2021"
authors = ["Max Atslega <max@sintonis.app>"]
description = "Greeter for sintonis"
repository = "https://github.com/sintonis/greeter"
license = "GPL-3.0-or-later"

[dependencies]
greetd_ipc = {version = "0.10.3", features = ["tokio-codec"]}
env_logger = "0.11.3"
simplelog = "0.12.2"
log = "0.4.22"
serde_derive = "1.0.204"
thiserror = "1.0.62"
toml = "0.8.14"
serde = "1.0.204"
chrono = "0.4.38"
iced = { version = "0.12.1", features = ["image", "svg", "tokio"] }
tokio = "1.38.1"
anyhow = "1.0.86"
